--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 
 <body>
 	<h1>Sitio de HateCodin</h1>
-	<p style="text-align: justify;">Probemos esta opcion de sitio web.</p>
 	<div>
-		<h3>Proyectos e Intereses</h3>
-		<ul>
-			<li>Nada</li>
-			<li>Todo</li>
-			<li>Limon Soda</li>
-		</ul>
+	<p>El aporte principal de HateCodin es el del servicio web <a class="normal_link" href="https://chilelibros.xyz">ChileLibros</a>, donde puedes encontrar libros de literatura chilena en el dominio público.</p>
+	</div>
+	<div>
+	<h2>Intereses</h2>
+	<ul>
+		<li>Odiar la programación</li>
+		<li>Robots</li>
+		<li>Estofado de carne</li>
+	</ul>
 	</div>
 </body>
 
