Quita nombre de título

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Sitio de Felipe Vega</title>
+	<title>Sitio de HateCodin</title>
 	<meta charset="utf-8"/>
 	<link rel='stylesheet' type='text/css' href='styles.css'>
 </head>
