Agrega páginas nuevas y justifica el texto en <p>.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 	<h1>Sitio de HateCodin</h1>
 	<div>
-	<p>El aporte principal de HateCodin es el del servicio web <a class="normal_link" href="https://chilelibros.xyz">ChileLibros</a>, donde puedes encontrar libros de literatura chilena en el dominio público.</p>
+		<p>El aporte principal de HateCodin es el del servicio web <a class="normal_link" href="https://chilelibros.xyz">ChileLibros</a>, donde puedes encontrar libros de literatura chilena en el dominio público.</p>
 	</div>
 	<div>
-	<h2>Intereses</h2>
+	<h2>Intereses y Proyectos</h2>
 	<ul>
 		<li>Odiar la programación</li>
-		<li>Robots</li>
-		<li>Estofado de carne</li>
+		<li><a href="obsoleitor.html">Robots</a></li>
+		<li><a href="estofado-de-carne.html">Estofado de carne</a></li>
 	</ul>
 	</div>
 </body>
