Modifica CSS de enlaces y parentización de CSS.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Sitio de HateCodin</h1>
 	<div>
-		<p>El aporte principal de HateCodin es el del servicio web <a class="normal_link" href="https://chilelibros.xyz">ChileLibros</a>, donde puedes encontrar libros de literatura chilena en el dominio público.</p>
+		<p>El aporte principal de HateCodin es el del servicio web <a href="https://chilelibros.xyz">ChileLibros</a>, donde puedes encontrar libros de literatura chilena en el dominio público.</p>
 	</div>
 	<div>
 	<h2>Intereses y Proyectos</h2>
