Arregla omisiones y errores ortográficos

--- a/estofado-de-carne.html
+++ b/estofado-de-carne.html
@@ -17,8 +17,9 @@
 				<li>2 enteros</li>
 				<li>1 picado</li>
 			</ul>
-			<li> hojas de laurel</li>
+			<li> 2 hojas de laurel</li>
 			<li>1/2 botella de vino</li>
+			<li>2 tazas de harina</li>
 			<li>un poco de especia variada</li>
 			<li>1 cebolla grande</li>
 			<li>3 zanahorias</li>
@@ -40,7 +41,7 @@
 			<li>Drenar la carne y conservar el líquido</li>
 			<li>Hacer una mezcla con la harina y las especias, picar la carne en cubos tamaño bocado</li>
 			<li>Pasar los cubos de carne por la mezcla de harina y saltear en una cacerola con aceite caliente</li>
-			<li>Cortar la cebolla en cuadritos, las zanahorais y papas en cuos (con todo y cáscara) y los champiñones en rodajas</li>
+			<li>Cortar la cebolla en cuadritos, las zanahorais y papas en cubos (con todo y cáscara) y los champiñones en rodajas</li>
 			<li>Ya cocida la carne sacarla del sartén y en ese mismo sartén agregar aceite nuevamente y luego las verduras. Saltear por 2 minutos</li>
 			<li>Agregar la marinada reservada y el ajo picado , mover un poco y agregar la carne. Repasar el fondo con una cuchara de madera</li>
 			<li>Agregar el caldo de pollo, la salsa inglesa, la sal, la pimienta y el romero, mezlar todo muy bien y tapar</li>
