Arregla error ortográfico.

--- a/estofado-de-carne.html
+++ b/estofado-de-carne.html
@@ -31,7 +31,7 @@
 			<li>1/2 cucharada de sal</li>
 			<li>1 cuchrada de pimienta</li>
 			<li>1/4 taza de tomate deshidratado</li>
-			<li>1 var de romero seco</li>
+			<li>1 vara de romero seco</li>
 		</ul>
 	</div>
 	<div>
