--- a/estofado-de-carne.html
+++ b/estofado-de-carne.html
@@ -37,15 +37,15 @@
 	<div>
 	<h2>Instrucciones</h2>
 		<ol>
-			<li>Se pone la carne con 2 dientes de ajo, el laurel y el vino por un par de horas por lo menos</li>
-			<li>Drenar la carne y conservar el líquido</li>
-			<li>Hacer una mezcla con la harina y las especias, picar la carne en cubos tamaño bocado</li>
-			<li>Pasar los cubos de carne por la mezcla de harina y saltear en una cacerola con aceite caliente</li>
-			<li>Cortar la cebolla en cuadritos, las zanahorais y papas en cubos (con todo y cáscara) y los champiñones en rodajas</li>
-			<li>Ya cocida la carne sacarla del sartén y en ese mismo sartén agregar aceite nuevamente y luego las verduras. Saltear por 2 minutos</li>
-			<li>Agregar la marinada reservada y el ajo picado , mover un poco y agregar la carne. Repasar el fondo con una cuchara de madera</li>
-			<li>Agregar el caldo de pollo, la salsa inglesa, la sal, la pimienta y el romero, mezlar todo muy bien y tapar</li>
-			<li>Llevar al horno por 3 horas aproximadamente hasta que la carne quede blandita</li>
+			<li>Se pone la carne con 2 dientes de ajo, el laurel y el vino por un par de horas por lo menos.</li>
+			<li>Drenar la carne y conservar el líquido.</li>
+			<li>Hacer una mezcla con la harina y las especias, picar la carne en cubos tamaño bocado.</li>
+			<li>Pasar los cubos de carne por la mezcla de harina y saltear en una cacerola con aceite caliente.</li>
+			<li>Cortar la cebolla en cuadritos, las papas en cubos (con cáscara y todo) las zanahorias y los champiñones en rodajas.</li>
+			<li>Ya cocida la carne sacarla de la sartén y en esa misma sartén agregar aceite nuevamente y luego las verduras. Saltear por 2 minutos.</li>
+			<li>Agregar la marinada reservada y el ajo picado, mover un poco y agregar la carne. Repasar el fondo con una cuchara de madera.</li>
+			<li>Agregar el caldo de pollo, la salsa inglesa, la sal, la pimienta y el romero, mezlar todo muy bien y tapar.</li>
+			<li>Llevar al horno por 3 horas aproximadamente hasta que la carne quede blanda.</li>
 		</ol>
 	</div>
 	<div><a href="index.html">Regresar</a></div>
