--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <body>
 	<h1>Sitio de HateCodin</h1>
+	<div class="centrado">
+		<ul class="menu">
+			<li><a href="escritos.html">artículos</a></li>
+		</ul>
+	</div>
 	<div>
 		<p>El aporte principal de HateCodin es el del servicio web <a href="https://chilelibros.xyz">ChileLibros</a>, donde puedes encontrar libros de literatura chilena en el dominio público.</p>
 	</div>
