--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<li>Odiar la programación</li>
 		<li><a href="obsoleitor.html">Robots</a></li>
 		<li><a href="estofado-de-carne.html">Estofado de carne</a></li>
+		<li><a href="eclectic-army-knife.html">Ecclectic Army Knife</a></li>
 	</ul>
 	</div>
 </body>
