Mejora estilos de la última captura.

--- a/eclectic-army-knife.html
+++ b/eclectic-army-knife.html
@@ -12,6 +12,7 @@
 	<div>
 		<p>You can find here tips and how-to's for different kinds of endevours written in a straightforward way, without cutesy didactic prose: Want that? -> Do this.</p>
 	</div>
+	<div>
 	<h3>Index</h3>
 	<ul>
 		<li><a href="vim.html">Vim</a></li>
@@ -23,6 +24,7 @@
 		<li>Cooking</li>
 		<li>Carpentry</li>
 	</ul>
+	</div>
 	<div><a href="index.html">Regresar</a></div>
 </body>
 
