--- a/eclectic-army-knife.html
+++ b/eclectic-army-knife.html
@@ -17,7 +17,7 @@
 	<ul>
 		<li><a href="vim.html">Vim</a></li>
 		<li><a href="latex.html">LaTeX</a></li>
-		<li><a href="pyhon.html">Python</a><++></li>
+		<li><a href="pyhon.html">Python</a></li>
 		<li>C/C++</li>
 		<li>Health/Medicine</li>
 		<li>Gardening</li>
