Arregla los titulos html y el enlace de regresar.

--- a/latex.html
+++ b/latex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Sitio de HateCodin</title>
+	<title>Eclectic Army Knife</title>
 	<meta charset="utf-8"/>
 	<link rel='stylesheet' type='text/css' href='styles.css'>
 </head>
@@ -20,7 +20,7 @@
 		</li>
 	</ul>
 	</div>
-	<div><a href="index.html">Regresar</a></div>
+	<div><a href="eclectic-army-knife.html">Regresar</a></div>
 </body>
 
 </html>
