--- a/eclectic-army-knife.html
+++ b/eclectic-army-knife.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Sitio de HateCodin</title>
+	<title>Eclectic Army Knife</title>
 	<meta charset="utf-8"/>
 	<link rel='stylesheet' type='text/css' href='styles.css'>
 </head>
