Agrega nueva receta y reorganiza la página.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<div class="centrado">
 		<ul class="menu">
 			<li><a href="escritos.html">artículos</a></li>
+			<li><a href="recetas.html">recetas</a></li>
 		</ul>
 	</div>
 	<div>
