--- a/estofado-de-carne.html
+++ b/estofado-de-carne.html
@@ -48,7 +48,7 @@
 			<li>Llevar al horno por 3 horas aproximadamente hasta que la carne quede blanda.</li>
 		</ol>
 	</div>
-	<div><a href="index.html">Regresar</a></div>
+	<div><a href="recetas.html">Regresar</a></div>
 </body>
 
 </html>
