Agrega nueva receta.

--- a/recetas.html
+++ b/recetas.html
@@ -13,6 +13,7 @@
 		<ul>
 			<li><a href="estofado-de-carne.html">Estofado de Carne</a></li>
 			<li><a href="unte-versatil.html">Dip versátil</a></li>
+			<li><a href="milanesa.html">Milanesa</a></li>
 		</ul>
 	</div>
 </body>
