--- a/eclectic-army-knife.html
+++ b/eclectic-army-knife.html
@@ -18,6 +18,7 @@
 		<li><a href="vim.html">Vim</a></li>
 		<li><a href="latex.html">LaTeX</a></li>
 		<li><a href="python.html">Python</a></li>
+		<li><a href="git.html">Git</a></li>
 		<li>C/C++</li>
 		<li>Health/Medicine</li>
 		<li>Gardening</li>
