Agrega nuevas recetas.

--- a/recetas.html
+++ b/recetas.html
@@ -14,6 +14,9 @@
 			<li><a href="estofado-de-carne.html">Estofado de Carne</a></li>
 			<li><a href="unte-versatil.html">Dip versátil</a></li>
 			<li><a href="milanesa.html">Milanesa</a></li>
+			<li><a href="chocolate-fizz.html">Chocolate Fizz</a></li>
+			<li><a href="milk-n-honey-frappe.html">Milk N'Honey Frappe</a></li>
+			<li><a href="ensalada-cobratas-aceitunas-alcaparras-anchoas.html">Ensalada de Corbatas con Aceitunas, Alcaparras y Anchoas</a></li>
 		</ul>
 	</div>
 </body>
