--- a/ensalada-corbatas-aceitunas-alcaparras-anchoas.html
+++ b/ensalada-corbatas-aceitunas-alcaparras-anchoas.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>Chocolate Fizz</h1>
+	<h1>Ensalada de Corbatas con Aceitunas, Alcaparras y Anchoas</h1>
 	<div>
 	<h2>Ingredientes</h2>
 		<ul>
