--- a/recetas.html
+++ b/recetas.html
@@ -17,6 +17,7 @@
 			<li><a href="chocolate-fizz.html">Chocolate Fizz</a></li>
 			<li><a href="milk-n-honey-frappe.html">Milk N'Honey Frappe</a></li>
 			<li><a href="ensalada-corbatas-aceitunas-alcaparras-anchoas.html">Ensalada de Corbatas con Aceitunas, Alcaparras y Anchoas</a></li>
+			<li><a href="ensalada-rigati-verduras-tomates-deshidratados-aceitunas-albahaca.html">Ensalada de Rigati con Verduras con Tomates deshidratados, Aceitunas y Aliño de Albahaca</a></li>
 		</ul>
 	</div>
 </body>
