Agrega nueva receta.

--- a/recetas.html
+++ b/recetas.html
@@ -20,6 +20,7 @@
 			<li><a href="ensalada-rigati-verduras-tomates-deshidratados-aceitunas-albahaca.html">Ensalada de Rigati con Verduras con Tomates deshidratados, Aceitunas y Aliño de Albahaca</a></li>
 			<li><a href="espirales-verduras-salsa-tres-quesos.html">Espirales con Verduras y Salsa de Tres Quesos</a></li>
 			<li><a href="caracoles-salsa-roquefort.html">Caracoles con Salsa Roquefort</a></li>
+			<li><a href="rigati-salsa-tomates-berenjenas.html">Rigati con Salsa de Tomates y Berenjeneas</a></li>
 		</ul>
 	</div>
 </body>
