--- a/recetas.html
+++ b/recetas.html
@@ -21,6 +21,7 @@
 			<li><a href="espirales-verduras-salsa-tres-quesos.html">Espirales con Verduras y Salsa de Tres Quesos</a></li>
 			<li><a href="caracoles-salsa-roquefort.html">Caracoles con Salsa Roquefort</a></li>
 			<li><a href="rigati-salsa-tomates-berenjenas.html">Rigati con Salsa de Tomates y Berenjeneas</a></li>
+			<li><a href="pollo-asado-al-limon-y-merken.html">Pollo asado al Limón y Merkén</a></li>
 		</ul>
 	</div>
 </body>
